@@ -703,15 +703,15 @@
       "&func.newWindow;", "&func.duplicateWindow;", "&func.closeOtherWindows;",
       "&func.quit;", "&func.minimizeWindow;", "&func.fullscreen;",
       "&func.openLink;", "&func.openLinkNewWindow;", "&func.copyLink;",
-      "&func.sendLink;", "&func.copyImageLocation;", "&func.saveLinkAs;",
-      "&func.saveImageAs;", "&func.savePageAs;", "&func.hideImages;",
-      "&func.copyImage;", "&func.homepage;", "&func.dailyReadings;",
-      "&func.searchWeb;", "&func.restart;", "&func.empty;", "&func.empty;",
+      "&func.copyImageLocation;", "&func.saveLinkAs;", "&func.saveImageAs;",
+      "&func.savePageAs;", "&func.hideImages;", "&func.copyImage;",
+      "&func.homepage;", "&func.dailyReadings;", "&func.searchWeb;",
+      "&func.restart;", "&func.empty;", "&func.empty;", "&func.empty;",
       "&func.empty;", "&func.empty;", "&func.empty;", "&func.empty;",
-      "&func.empty;", "&func.empty;", "&func.empty;", "&func.empty;",
-      "&func.loadURLScript1;", "&func.loadURLScript2;", "&func.loadURLScript3;",
-      "&func.loadURLScript4;", "&func.loadURLScript5;", "&func.loadURLScript6;",
-      "&func.loadURLScript7;", "&func.loadURLScript8;", "&func.loadURLScript9;",
+      "&func.empty;", "&func.empty;", "&func.empty;", "&func.loadURLScript1;",
+      "&func.loadURLScript2;", "&func.loadURLScript3;", "&func.loadURLScript4;",
+      "&func.loadURLScript5;", "&func.loadURLScript6;", "&func.loadURLScript7;",
+      "&func.loadURLScript8;", "&func.loadURLScript9;",
       "&func.loadURLScript10;", "&func.loadURLScript11;",
       "&func.loadURLScript12;", "&func.loadURLScript13;",
       "&func.loadURLScript14;", "&func.loadURLScript15;",
@@ -734,7 +734,7 @@
       "autoscrolling", "newTab", "duplicateTab", "prevTab", "nextTab",
       "closeTab", "closeOtherTabs", "undoCloseTab", "newWindow",
       "duplicateWindow", "closeOtherWindows", "quit", "minimizeWindow",
-      "fullscreen", "openLink", "openLinkNewWindow", "copyLink", "sendLink",
+      "fullscreen", "openLink", "openLinkNewWindow", "copyLink",
       "copyImageLocation", "saveLinkAs", "saveImageAs", "savePageAs",
       "hideImages", "copyImage", "homepage", "dailyReadings", "searchWeb",
       "restart", "empty", "empty", "empty", "empty", "empty", "empty", "empty",
