@@ -51,7 +51,6 @@ fullscreen=Na celou obrazovku
 openLink=Otevřít odkaz
 openLinkNewWindow=Otevřít odkaz v novém okně
 copyLink=Kopírovat odkaz
-sendLink= Send Link...
 copyImageLocation=Kopírovat adresu obrázku
 saveLinkAs=Uložit cíl odkazu jako...
 saveImageAs=Uložit obrázek jako...
