@@ -32,7 +32,6 @@ fullscreen=Vollbild
 openLink=Link öffnen
 openLinkNewWindow=Link in neuem Fenster öffnen
 copyLink=Link-Adresse kopieren
-sendLink= Send Link...
 copyImageLocation=Grafikadresse kopieren
 saveLinkAs=Ziel speichern unter...
 saveImageAs=Grafik speichern unter...
