@@ -153,7 +153,6 @@ END OF INSTRUCTIONS
 <!ENTITY func.openLink "Open Link">
 <!ENTITY func.openLinkNewWindow "Open Link in New Window">
 <!ENTITY func.copyLink "Copy Link">
-<!ENTITY func.sendLink "Send Link...">
 <!ENTITY func.copyImageLocation "Copy Image Location">
 <!ENTITY func.saveLinkAs "Save Link As...">
 <!ENTITY func.saveImageAs "Save Image As...">
