@@ -51,7 +51,6 @@ fullscreen=Toggle Fullscreen
 openLink=Open Link
 openLinkNewWindow= Open Link New Window
 copyLink=Copy Link
-sendLink=Send Link...
 copyImageLocation=Copy Image Location
 saveLinkAs=Save Link As...
 saveImageAs=Save Image As...
