@@ -46,7 +46,6 @@ fullscreen=Activar/desactivar pantalla completa
 openLink=Abrir enlace
 openLinkNewWindow=Abrir enlace en una ventana nueva
 copyLink=Copiar enlace
-sendLink=Enviar enlace...
 copyImageLocation=Copiar dirección de la imagen
 saveLinkAs=Guardar enlace como...
 saveImageAs=Guardar imagen como...
