@@ -51,7 +51,6 @@ fullscreen=Basculer plein \u00E9cran
 openLink=Ouvrir lien
 openLinkNewWindow= Ouv. lien nouv. fen\u00EAt.
 copyLink=Copier lien
-sendLink= Send Link...
 copyImageLocation= Copier adresse image
 saveLinkAs=Enreg. lien sous...
 saveImageAs=Sauvegarder Image...
