@@ -46,7 +46,6 @@ fullscreen=Teljes képernyő
 openLink=Hivatkozás megnyitása
 openLinkNewWindow=Hivatkozás megnyitása új ablakban
 copyLink=Hivatkozás címének másolása
-sendLink=Hivatkozás küldése...
 copyImageLocation=Kép címének másolása
 saveLinkAs=Hivatkozás mentése más néven...
 saveImageAs=Kép mentése más néven...
