@@ -37,7 +37,6 @@ fullscreen=Attiva/Disattiva Schermo Intero
 openLink=Apri Collegamento
 openLinkNewWindow=Apri Collegamento in una Nuova Finestra
 copyLink=Copia Collegamneto
-sendLink= Send Link...
 copyImageLocation=Copia indirizzo dell'Immagine
 saveLinkAs=Salva Colelgamento con Nome...
 saveImageAs=Salva Immagine con Nome...
