@@ -51,7 +51,6 @@ fullscreen=全画面表示の切り替え
 openLink=リンクを開く
 openLinkNewWindow= リンクを新しいウィンドウで開く
 copyLink=リンクのコピー
-sendLink= Send Link...
 copyImageLocation= 画像の URL をコピー
 saveLinkAs=名前を付けてリンクを保存...
 saveImageAs=名前を付けて画像を保存...
