@@ -46,7 +46,6 @@ fullscreen=전체화면 전환
 openLink=링크 열기
 openLinkNewWindow=링크 새 창으로 열기
 copyLink=링크 복사
-sendLink=링크 보내기...
 copyImageLocation=이미지 위치 복사
 saveLinkAs=새 이름으로 저장...
 saveImageAs=새 이름으로 이미지 저장...
