@@ -32,7 +32,6 @@ fullscreen=Pełny ekran
 openLink=Otwórz odnośnik
 openLinkNewWindow=Otwórz odnośnik w nowym oknie
 copyLink=Kopiuj odnośnik
-sendLink= Send Link...
 copyImageLocation=Kopiuj adres obrazka
 saveLinkAs=Zapisz odnośnik jako...
 saveImageAs=Zapisz obrazek jako...
