@@ -154,7 +154,6 @@ END OF INSTRUCTIONS
 <!ENTITY func.openLink "Abrir Link">
 <!ENTITY func.openLinkNewWindow "Abrir Link em Nova Janela">
 <!ENTITY func.copyLink "Copiar Link">
-<!ENTITY func.sendLink "Send Link...">
 <!ENTITY func.copyImageLocation "Copiar Localização da Imagem">
 <!ENTITY func.saveLinkAs "Salvar Link Como...">
 <!ENTITY func.saveImageAs "Salvar Imagem Como...">
