@@ -51,7 +51,6 @@ fullscreen=Alternar Tela Cheia
 openLink=Abrir Link
 openLinkNewWindow= Abrir Link em Nova Janela
 copyLink=Copiar Link
-sendLink= Send Link...
 copyImageLocation= Copiar Localização da Imagem
 saveLinkAs=Salvar Link Como...
 saveImageAs=Salvar Imagem Como...
