@@ -32,7 +32,6 @@ fullscreen=Na celú obrazovku
 openLink=Otvoriť odkaz
 openLinkNewWindow=Otvoriť odkaz v novom okne
 copyLink=Kopírovať odkaz
-sendLink= Send Link...
 copyImageLocation=Kopírovať adresu obrázka
 saveLinkAs=Uložiť cieľ odkazu ako...
 saveImageAs=Uložiť obrázok ako...
