@@ -155,7 +155,6 @@ END OF INSTRUCTIONS
 <!ENTITY func.openLink "Bağlantıyı Aç">
 <!ENTITY func.openLinkNewWindow "Bağlantıyı Yeni Pencerede Aç">
 <!ENTITY func.copyLink "Bağlantıyı Kopyala">
-<!ENTITY func.sendLink "Send Link...">
 <!ENTITY func.copyImageLocation "Resim Konumunu Kopyala">
 <!ENTITY func.saveLinkAs "Bağlantıyı Farklı Kaydet...">
 <!ENTITY func.saveImageAs "Resmi Farklı Kaydet...">
