@@ -51,7 +51,6 @@ fullscreen=Tam Ekrana Geçiş Yap
 openLink=Bağlantıyı Aç
 openLinkNewWindow=Bağlantıyı Yeni Pencerede Aç
 copyLink=Bağlantıyı Kopyala
-sendLink= Send Link...
 copyImageLocation=Görüntü Konumunu Kopyala
 saveLinkAs=Bağlantıyı Farklı Kaydet...
 saveImageAs=Görüntüyü Farklı Kaydet...
