@@ -155,7 +155,6 @@ END OF INSTRUCTIONS
 <!ENTITY func.openLink "打开链接">
 <!ENTITY func.openLinkNewWindow "在新窗口打开链接">
 <!ENTITY func.copyLink "复制链接地址">
-<!ENTITY func.sendLink "发送链接...">
 <!ENTITY func.copyImageLocation "复制图片地址">
 <!ENTITY func.saveLinkAs "保存链接到...">
 <!ENTITY func.saveImageAs "保存图片到...">
