@@ -51,7 +51,6 @@ fullscreen=切换到全屏
 openLink=打开链接
 openLinkNewWindow=在新窗口打开链接
 copyLink=复制链接
-sendLink=发送链接...
 copyImageLocation=复制图片链接
 saveLinkAs=保存链接到...
 saveImageAs=保存图片到...
