@@ -51,7 +51,6 @@ fullscreen=全螢幕
 openLink=開啟鏈結
 openLinkNewWindow= 在新視窗開啟鏈結
 copyLink=複製鏈結網址
-sendLink= Send Link...
 copyImageLocation= 複製圖片網址
 saveLinkAs=鏈結另存新檔…
 saveImageAs=圖片另存新檔…
