@@ -38,3 +38,4 @@ Changes by ngdeleito (see git history for the full details)
 - removed support for upgrading from versions prior to 4.3.2
 - moved preferences to the extensions. branch
 - removed properties action
+- removed sendLink action
